force-app/main/default/objects/aha_Contractor_Incident__c/fields/Activity_History__c.field-meta.xml
<CustomField>
    <fullName>Activity_History__c</fullName>
    <label>Activity History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>