force-app/main/default/objects/aha_Contractor_Incident__c/fields/Affected_Address__c.field-meta.xml
<CustomField>
    <fullName>Affected_Address__c</fullName>
    <label>Affected Address</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>