force-app/main/default/objects/aha_Contractor_Incident__c/fields/Case_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_Reference__c</fullName>
    <label>Case Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>