force-app/main/default/objects/aha_Contractor_Incident__c/fields/Customers_Affected__c.field-meta.xml
<CustomField>
    <fullName>Customers_Affected__c</fullName>
    <label>Customers Affected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>