force-app/main/default/objects/aha_Contractor_Incident__c/fields/Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notes__c</fullName>
    <label>Escalation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>