force-app/main/default/objects/aha_Contractor_Incident__c/fields/Job_Address_text__c.field-meta.xml
<CustomField>
    <fullName>Job_Address_text__c</fullName>
    <label>Job Address</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>