force-app/main/default/objects/aha_Contractor_Incident__c/fields/Pets_Decanted__c.field-meta.xml
<CustomField>
    <fullName>Pets_Decanted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets Decanted</label>
    <type>Checkbox</type>
</CustomField>