force-app/main/default/objects/aha_Contractor_Incident__c/fields/Reason_For_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Escalation__c</fullName>
    <label>Reason For Escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>