force-app/main/default/objects/aha_Contractor_Incident__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <label>Resident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>