force-app/main/default/objects/aha_Contractor_Incident__c/fields/Transport_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Transport_Arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Arranged</label>
    <type>Checkbox</type>
</CustomField>