force-app/main/default/objects/aha_Contractor_Incident__c/listViews/Contractor_Incidents_Contractor_Incident.listView-meta.xml
<ListView>
    <fullName>Contractor_Incidents_Contractor_Incident</fullName>
    <columns>NAME</columns>
    <columns>aha_AI_Enrichment_Status__c</columns>
    <columns>aha_Sourced_from_Email__c</columns>
    <columns>aha_Email_From__c</columns>
    <columns>aha_Email_Subject__c</columns>
    <filterScope>Queue</filterScope>
    <label>Contractor Incidents Queue</label>
    <queue>aha_Contractor_Incidents</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>